--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,41 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/gson-2.13.1.jar"/>
 	<classpathentry kind="lib" path="lib/jline-3.25.0.jar"/>
+	<classpathentry kind="lib" path="lib/auto-service-annotations-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/byte-buddy-1.17.6.jar"/>
+	<classpathentry kind="lib" path="lib/commons-exec-1.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/error_prone_annotations-2.38.0.jar"/>
+	<classpathentry kind="lib" path="lib/failureaccess-1.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/guava-33.4.8-jre.jar"/>
+	<classpathentry kind="lib" path="lib/j2objc-annotations-3.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/jspecify-1.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-api-1.51.0.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-context-1.51.0.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-exporter-logging-1.51.0.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-sdk-1.51.0.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-sdk-common-1.51.0.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-sdk-extension-autoconfigure-1.51.0.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-sdk-extension-autoconfigure-spi-1.51.0.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-sdk-logs-1.51.0.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-sdk-metrics-1.51.0.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-sdk-trace-1.51.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-api-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-chrome-driver-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-chromium-driver-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-devtools-v136-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-devtools-v137-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-devtools-v138-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-edge-driver-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-firefox-driver-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-http-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-ie-driver-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-json-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-manager-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-os-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-remote-driver-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-safari-driver-4.34.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-support-4.34.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
